# TrX

./: .gitignore  Cargo.toml  README.md  spec.md
.github/workflows/: ci.yml
examples/: sdk_example.rs  toy_example.rs
src/: commitment.rs  constants.rs  errors.rs  keys.rs  lib.rs  mempool.rs  pre_computation.rs  serde.rs  setup.rs  signatures.rs  tests.rs  transactions.rs  tx_enc.rs  utils.rs
src/cli/: commands.rs  handlers.rs  mod.rs  output.rs
src/core/: mod.rs  serde_impl.rs  types.rs
src/crypto/: decryption.rs  engine.rs  errors.rs  kzg.rs  mod.rs  pre_computation.rs  serde_impl.rs  setup.rs  signatures.rs  signed_share.rs  trx_crypto.rs  types.rs
src/crypto/kzg/: commitment.rs  mod.rs  precompute.rs
src/crypto/signatures/: all.rs  bls.rs  mod.rs
src/crypto/tess/: decryption.rs  encryption.rs  mod.rs  setup.rs
src/mempool/: mod.rs
src/network/: messages.rs  mod.rs
src/sdk/: client.rs  decryption.rs  mempool.rs  mod.rs  proposer.rs  setup.rs  validator.rs
tests/: flow.rs
tests/common/: fixtures.rs  helpers.rs  mod.rs
